--- a/.github/workflows/ValidateApproval.yaml
+++ b/.github/workflows/ValidateApproval.yaml
@@ -58,6 +58,8 @@ jobs:
           CONTEXT="Approval Validation"
           APPROVED_SHA="${{ steps.approve_sha.outputs.approved_sha }}"
 
+          TARGET_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+      
           # Post the status using GitHub API
           curl -s -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
@@ -65,6 +67,7 @@ jobs:
             -d "{
               \"state\": \"$STATUS\",
               \"description\": \"$DESCRIPTION\",
-              \"context\": \"$CONTEXT\"
+              \"context\": \"Approval Validation\",
+              \"target_url\": \"$TARGET_URL\"
             }" \
             "https://api.github.com/repos/${{ github.repository }}/statuses/$APPROVED_SHA"
